# cmake_find_demo

custom_main_app/: CMakeLists.txt
custom_main_app/cmake/: Finddynamiclib.cmake
custom_main_app/src/: main.cpp
dynamiclib/: CMakeLists.txt
dynamiclib/install/include/: dynamiclib.h
dynamiclib/src/: dynamiclib.cpp
